19/9/15
  No useless gaps in fullscreen mode

29/8/15
  Fix for xsetroot fail

18/7/15
  Xrandr capabilities added. Plug'n'play monitors
  SHOW_BAR in rc.conf can now be set for each desktop
  Useless gaps can be set around windows and the bar
   in rc.conf
  Can float a window in a tiling mode or pop it back in
   with a keyboard shortcut
  Can set a window to start out floating in apps.conf
  Improvements in fullscreen mode

5/3/14
  Point update [ 1.0.6 ]
  Better window management - can cycle through all windows - transients
   included
  Minimum size for window when resizing in stacking mode
  Add new function "terminate" for keyboard shortcut to
   close any open windows, exit the window manager and shutdown(1)
   or reboot(2)
  Fix for kill_client() when window has save dialog
  Add option BAR_SHORT to rc.conf to shorten the bar's 
   length to have room for an external app
  Add option in rc.conf to select which desktop to start on
  Right click an unfocused desktop in the switcher to move
   the focused window to that desktop

6/10/13
  Point update [ 1.0.5 ]
  Option to have the bar transparent when running a compositor
  Fix for failed start when Xinerama info isn't available

17/9/13
  Point update [ 1.0.4 ]
  Better ordering of windows when changing desktops

22/4/13
  Point update
  Better Handling of mozilla products multiple destroy notify events...
  Fix for SHOW_BAR option in rc.conf not doing anything
  Marker for last focused desktop in the switcher

21/4/13
  Fix for firefox menus disappearing when moving entries

14/4/13
  Fix for window border colours not updating when the config is updated

22/3/13
  Check number of windows before anything else in prev_win
  Fix for focus not returning to current window when an app is removed from another desktop.

17/3/13
  Fix for double clicking an empty desktop in the switcher killing the xserver.
  Added check for a window manager already running.