@@ -22,7 +22,7 @@
  */
 
 #define _BSD_SOURCE
-#define _DEAULT_SOURCE
+#define _DEFAULT_SOURCE
 #include <X11/Xlib.h>
 #include <X11/XKBlib.h>
 //#include <X11/keysym.h>
