@@ -1,3 +1,8 @@
+16/11/15
+  Modifying key ALTSuper changed to AltSuper for consistency
+  One value for DEFAULTMODE sets all desktops to that mode
+  Added man page
+
 19/9/15
   No useless gaps in fullscreen mode
 
